--- a/src/styles.css
+++ b/src/styles.css
@@ -125,3 +125,11 @@ button[type=submit]:hover {
   font-weight: bold;
   color:#6C63FF;
 }
+
+.footer {
+  text-align: center;
+  margin-top: 20px;
+  padding: 10px;
+  font-size: 14px;
+  color: #666;
+}
