--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@ html, body {
 
 body {
   display: grid;
-  place-items: center; /* 水平和垂直居中 */
+  /* place-items: center;  */
   background-color: #E8EBF8;
   color: #333;
   margin: 0;
@@ -13,7 +13,7 @@ body {
 }
 
 .container {
-  min-width: 350px;
+  width: 80%;
   max-width: 500px;
   box-sizing: border-box; 
   margin: 20px auto;
@@ -141,4 +141,70 @@ button[type=submit]:hover {
   padding: 10px;
   font-size: 14px;
   color: #666;
+}
+
+
+/* cards */
+.fixed-deposit-cards-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 0 auto;
+  max-width: 500px;
+}
+
+.fixed-deposit-card {
+  display: flex;
+  justify-content: space-between;
+  background-color: #fff;
+  border-radius: 12px;
+  padding: 10px;
+  position: relative;
+  overflow: hidden;
+}
+
+.progress-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 5px;
+  background-color: #6a1b9a; /* Purple color */
+}
+
+.left-side, .right-side {
+  flex: 1;
+  padding: 10px;
+}
+
+.labels {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.bank-label, .product-label {
+  background-color: #e0e0e0;
+  padding: 2px 5px;
+  border-radius: 3px;
+}
+
+.principal {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.interest-rate-term {
+  font-size: 0.9em;
+  color: #666;
+}
+
+.remaining-days {
+  text-align: end;
+}
+
+.interest {
+  font-size: 1.2em;
+  color: #333;
+  font-weight: bold;
+  text-align: end;
 }
